alignment issue in acknowledge screen of pt application.

--- a/frontend/web/rainmaker/packages/employee/src/ui-views/ScreenInterface/index.scss
+++ b/frontend/web/rainmaker/packages/employee/src/ui-views/ScreenInterface/index.scss
@@ -173,7 +173,7 @@ span[class^="MuiFormLabel-asterisk"] {
     position: fixed !important;
     bottom: 0;
     right: 0;
-    width: 83.33vw;
+    width: 100vw;
     text-align: right;
 }
 }
@@ -199,7 +199,7 @@ span[class^="MuiFormLabel-asterisk"] {
         overflow: inherit !important;
     }
     .apply-wizard-footer { button {
-       // min-width: 360px !important;
+    // min-width: 360px !important;
         margin-left: 0 !important;
         margin-right: 0 !important;
      }}
@@ -225,7 +225,7 @@ span[class^="MuiFormLabel-asterisk"] {
         bottom: 0;
         right: 0;
         z-index: 1;
-        width: 83.33vw;
+        width: 100vw;
         text-align: right;
         overflow: inherit !important;
     }
